<resources>
    <string name="app_name">E-demy</string>
    <string name="welcum">Welcome to E-demy</string>
    <string name="login">Log in or sign up to save your progress as you work through courses on E-demy</string>
    <string name="signup">Sign up</string>
    <string name="have_account">Already have an account?</string>
    <string name="signin">Sign in</string>
    <string name="here">Here you can look up the courses you interested in.</string>
    <string name="anth">You can learn anything</string>
    <string name="supp">E-demy supports many artists though the world.</string>
    <string name="saved">Saved</string>
</resources>