<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/ll2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/welcum"
            android:textColor="@color/black"
            android:textSize="34dp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="325dp"
            android:layout_height="55dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/shape1"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape2"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textSize="17dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>