<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/welcum"
            android:textColor="@color/black"
            android:textSize="34dp" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/here"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="270dp"
            android:background="@drawable/rect1"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/art" />
        </LinearLayout>

        <TextView
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/anth"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/supp"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape6"
            android:fontFamily="@font/poppins_semibold"
            android:text="Select course"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll9"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:background="@color/white"
            android:src="@drawable/home"
            android:tooltipText="home" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:background="@color/white"
            android:src="@drawable/find"
            android:tooltipText="find" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:background="@color/white"
            android:src="@drawable/saved"
            android:tooltipText="saved" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>